--- a/analyses/analysis_setup.ipynb
+++ b/analyses/analysis_setup.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Questions students have about Chicago Public Schools (CPS), and an exploration of those questions.\n",
     "\n",
-    "[More information here, for the curious.](#More-Information)"
+    "[More information here.](#More-Information)"
    ]
   },
   {
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
    "source": [
     "# Because this is the first question we need to load in the data first.\n",
     "# If you do not understand what is going on here and other similar-looking sections\n",
-    "# please feel free to ignore them, and skip to the plots and regular text.\n",
+    "# please feel free to ignore them, and skip to the figures and regular text.\n",
     "\n",
     "# Here we retrieve code we'll use for our analysis\n",
     "import numpy as np\n",
@@ -92,7 +92,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Of 184 high schools, in most high schools more than half of their graduating students enroll in college. However, in as many as ~50 schools less than 40% of graduating students enroll in college, and in only 20 schools more than 80% of graduating students enroll in college."
+    "### Answer:\n",
+    "\n",
+    "As can be seen in the above figure, of 184 high schools, in most high schools more than half of their graduating students enroll in college. However, *in as many as ~50 schools less than 40% of graduating students enroll in college*.\n",
+    "Further *in only 20 schools* more than 80% of graduating students enroll in college."
    ]
   },
   {
@@ -483,8 +486,9 @@
     "\n",
     "A few things to note:\n",
     "* Blocks of code are scattered throughout. These are the actual pieces of code used for the exploration, and are kept as an example, but are not the main point. [The full code is available here.](https://github.com/avault/chicago_public_schools)\n",
-    "* The raw plots and results were fully obtained within sessions themselves, but are presented here in a polished form.\n",
+    "* The questions were copied verbatim from the students and the raw plots and results were fully obtained within sessions themselves. However, the results are presented here in a polished form.\n",
     "* Each student question is accompanied is accompanied by some \"Follow-up Questions\" that suggest next steps or further extensions.\n",
+    "* The work here is preliminary, and as such there may be issues in the exploration or the interpretation.\n",
     "\n",
     "This expedition was led by Zach Hafen.\n",
     "\n",
