Added the questions we didn't have time to answer.

--- a/analyses/analysis_setup.ipynb
+++ b/analyses/analysis_setup.ipynb
@@ -24,7 +24,10 @@
     "* [How does teacher attendance affect a student's performance?](#How-does-teacher-attendance-affect-a-student's-performance?)\n",
     "* [How does standardized testing prepare students for the future?](#How-does-standardized-testing-prepare-students-for-the-future?)\n",
     "* [How does the food in CPS impact the students performance in school?](#How-does-the-food-in-CPS-impact-the-students-performance-in-school?)\n",
-    "* [Do extracurricular activities affect the success of the student?](#Do-extracurricular-activities-affect-the-success-of-the-student?)"
+    "* [Do extracurricular activities affect the success of the student?](#Do-extracurricular-activities-affect-the-success-of-the-student?)\n",
+    "\n",
+    "The students had many more questions than there was time to answer.\n",
+    "[Click here to jump to a full list of all questions.](#All-Questions)"
    ]
   },
   {
@@ -559,6 +562,37 @@
     "\n",
     "* Is there a way we can do a more careful job of looking for the trend quantitatively?\n",
     "* Does the school creativity correlate with other measures like school culture, which don't clearly correlate with performance on standardized tests?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# All Questions\n",
+    "\n",
+    "Below are questions we didn't have time to approach.\n",
+    "That's not because they're not interesting though: every single one is a very interesting question.\n",
+    "Note that students came up with questions individually, so some questions may overlap.\n",
+    "\n",
+    "* How well do selective enrollment schools succeed in enrolling their student into selective college in comparison to IB schools?\n",
+    "* Does the school's ranking affect the students scores?\n",
+    "* Does the zip code have any affect on the performance of a student?\n",
+    "* How do immigrants’ high school success rate compare to an average student citizen?\n",
+    "* What gender, between boys and girls, tend to read more and does that lead to higher test scores on standardized tests?\n",
+    "* To what extent does the school type affect student performance?\n",
+    "* How does the student attendance affect ACT growth in 11th grade?\n",
+    "* Are 8th grade NWEA scores indicative of the success rate students will have in high school?\n",
+    "* How does the teachers attendance effect the overall growth of a students NWEA scores?\n",
+    "* Does Chicago Public Schools take into consideration the mental health of students when rating the school on its performance?\n",
+    "* How does the amount of student write-ups affect the schools overall performance?\n",
+    "* Is there a trend of students that increase/ grow from NWEA scores?\n",
+    "* What impact does collaboration among teachers have on CPS students?\n",
+    "* What impact may parental involvement have on a student's academic performance?\n",
+    "* Do SATs scores reflect what students really know?\n",
+    "* Does high school location affect college persistence?\n",
+    "* Why do schools promote healthy eating but still give junk food?\n",
+    "* Do standardized tests actually reflect on a student's academic ability?\n",
+    "* Does the amount of students in a classroom affect academic growth?"
    ]
   },
   {
