Minor text tweaks.

--- a/analyses/student_intro_analysis.ipynb
+++ b/analyses/student_intro_analysis.ipynb
@@ -607,9 +607,9 @@
     "This webpage is the result.\n",
     "\n",
     "A few things to note:\n",
-    "* Blocks of code are scattered throughout. These are the actual pieces of code used for the exploration, and are kept as an example, but are not the main point. [The full code is available here.](https://github.com/avault/chicago_public_schools)\n",
-    "* The questions were copied verbatim from the students and the raw plots and results were fully obtained within sessions themselves. However, the results are presented here in a polished form.\n",
-    "* Each student question is accompanied is accompanied by some \"Follow-up Questions\" that suggest next steps or further extensions.\n",
+    "* Blocks of code are scattered throughout. These are the actual pieces of code used for the exploration, and are kept as an example, but are not the main point: the figures and text are. [If curious, the full code is available here.](https://github.com/avault/chicago_public_schools)\n",
+    "* The questions were copied verbatim from the students and the raw plots and results were fully obtained within the sessions themselves. However, the results are presented here in a polished form.\n",
+    "* Each student question is accompanied by some \"Follow-up Questions\" that suggest next steps or further extensions.\n",
     "* The work here is preliminary, and as such there may be issues in the exploration or the interpretation. Many things could also be done much more carefully (e.g. considering elementary, middle, and high school fully separately).\n",
     "* Many of the figures here plot discrete data on the x axis. In most cases we've introduced \"jitter\" in the figure to prevent points overlapping one another, even though they all have the same x value.\n",
     "\n",
@@ -622,13 +622,6 @@
    "source": [
     "# [**Back to the top**](#What-do-students-want-to-know-about-the-Chicago-Public-School-system?)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
